# antigravity-agent

./: README.md  README_START.txt  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.storybook.config.ts  vitest.unit.config.ts
.github/workflows/: autobuild.yml  ci.yml  release.yml  tauri-build.yml
docs/: README.en.md  README.zh-CN.md  README.zh-TW.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db_monitor.rs  state.rs
src-tauri/src/antigravity/: cleanup.rs  restore.rs  starter.rs
src-tauri/src/platform/: process.rs
src-tauri/src/proto_gen/: state_sync.rs
src-tauri/src/server/: middleware.rs  mod.rs  websocket.rs
src-tauri/src/services/: backup.rs  crypto.rs  system.rs
src-tauri/src/services/account/: lifecycle.rs  metrics.rs  mod.rs  storage.rs  types.rs
src-tauri/src/utils/: log_sanitizer.rs
src/assets/locales/en/: account.json
src/assets/locales/zh-CN/: account.json
src/assets/locales/zh-TW/: account.json
src/commands/: AccountCommands.ts  AccountManageCommands.ts  AccountMetricsCommands.ts  AccountTriggerCommands.ts  DbMonitorCommands.ts  LoggingCommands.ts  PlatformCommands.ts  ProcessCommands.ts  SettingsCommands.ts  TrayCommands.ts
src/commands/types/: account.types.ts
src/components/: ExportPasswordDialog.tsx  ImportPasswordDialog.tsx
src/components/app/: AppContent.tsx  AppDock.tsx  AppLoader.tsx
src/components/base-ui/: BaseButton.test.tsx  BaseButton.tsx  BaseInput.tsx  BaseProgress.tsx
src/components/business/: AccountDetailModal.tsx  AccountSessionList.tsx  AccountSessionListCard.tsx  AccountsListToolbar.tsx  LanguageDropdown.tsx  SettingsDialog.tsx  UpdateBadge.tsx  UpdateDialog.tsx  account-session-motion.ts  account-session-types.ts  update-presentation.ts
src/components/ui/: animated-grid-pattern.tsx  animated-tooltip.tsx  line-shadow-text.tsx  liquid-progress-bar.tsx
src/hooks/: use-antigravity-is-running.ts  use-install-extension.tsx  use-password-dialog-state.ts  use-update-checker.ts
src/lib/: invoke-adapter.ts  logger.ts
src/modules/: db-monitoring-store.ts  use-account-addition-data.ts  use-app-settings.ts  use-import-export-accounts.ts
src/stories/: AccountSessionListCard.stories.ts  AccountsListToolbar.stories.tsx  App.stories.tsx  BaseAvatar.stories.tsx  BaseButton.stories.tsx  LiquidProgressBar.stories.ts  UpdateBadge.stories.tsx  UpdateDialog.stories.tsx
src/stories/mocks/: accountSessions.ts
vscode-extension/: package-lock.json  package.json
vscode-extension/src/constants/: api.ts
vscode-extension/src/managers/: status-bar-manager.ts
vscode-extension/src/services/: websocket-client.ts
