[package]
name = "antigravity-agent"
version = "1.7.3"
description = "Antigravity Agent - Account management tool"
authors = ["Kiki"]
edition = "2021"

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-os = "2"
tauri-plugin-opener = "2.5.2"

# Tracing 生态系统
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2.4"
tracing-attributes = "0.1"

base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
sysinfo = "0.30"
prost = "0.12"
log = "0.4.28"
actix = "0.13"
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-web-actors = "4"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12.5"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "stream"] }
tempfile = "3.10"
futures-util = "0.3"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]


[build-dependencies]
tauri-build = { version = "2.0", features = [] }
prost-build = "0.12"
protoc-bin-vendored = "3"
